fixed issue with tall images overflowing

--- a/src/css/ImageGrid.css
+++ b/src/css/ImageGrid.css
@@ -53,8 +53,8 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	height: 100%;
-	/*height: calc(100vh - 76px); - not needed, we hide topNavBar during slide show */
+	height: 100vh;
+	/* height: calc(100vh - 76px); - not needed, we hide topNavBar during slide show */
 }
 
 .slideShowContainer .slideShowMain {
@@ -63,7 +63,6 @@
 	align-items: center;
 	justify-content: center;
 	overflow: hidden;
-	height: 100%;
 }
 
 .slideShowContainer .slideShowMain img {
